--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/apleek3/liri-node-app#readme",
   "dependencies": {
     "dotenv": "^6.0.0",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "spotify-web-api-node": "^3.1.1"
   }
 }
