--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "homepage": "https://github.com/apleek3/liri-node-app#readme",
   "dependencies": {
     "dotenv": "^6.0.0",
+    "jquery": "^3.3.1",
+    "node-spotify-api": "^1.0.7",
     "request": "^2.87.0",
-    "spotify-web-api-node": "^3.1.1"
+    "spotify-web-api-node": "^3.1.1",
+    "twitter": "^1.7.1"
   }
 }
