--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "fs-extra": "^7.0.0",
     "jquery": "^3.3.1",
     "node-spotify-api": "^1.0.7",
     "request": "^2.87.0",
